<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/dimen_20dp">

    <ImageView
        android:id="@+id/poster_image_view"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_340dp"
        android:contentDescription="@string/movies_poster_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_36dp"
        android:layout_marginEnd="@dimen/dimen_36dp"
        android:layout_marginBottom="@dimen/dimen_16dp"
        android:shadowColor="@color/gray"
        android:shadowDx="@dimen/shadow_dx"
        android:shadowDy="@dimen/shadow_dy"
        android:shadowRadius="@dimen/shadow_radius"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_18sp"
        app:layout_constraintBottom_toBottomOf="@id/poster_image_view"
        app:layout_constraintEnd_toEndOf="@id/poster_image_view"
        app:layout_constraintStart_toStartOf="@id/poster_image_view"
        tools:text="Movie name" />

    <ImageView
        android:id="@+id/vote_average_image_view"
        android:layout_width="@dimen/dimen_12dp"
        android:layout_height="@dimen/dimen_12dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:contentDescription="@string/vote_average_content_description"
        android:src="@drawable/ic_star"
        app:layout_constraintEnd_toEndOf="@id/vote_average_text_view"
        app:layout_constraintStart_toStartOf="@id/vote_average_text_view"
        app:layout_constraintTop_toBottomOf="@id/poster_image_view"
        app:tint="@color/yellow" />

    <TextView
        android:id="@+id/vote_average_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dimen_12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vote_average_image_view"
        tools:text="@string/vote_average" />
</androidx.constraintlayout.widget.ConstraintLayout>
