<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.detail.movie.MovieDetailFragment">

    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
        android:id="@+id/video_player_view"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_240dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/poster_image_view"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_0dp"
        android:contentDescription="@string/movies_poster_content_description"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/video_player_view"
        app:layout_constraintEnd_toEndOf="@id/video_player_view"
        app:layout_constraintStart_toStartOf="@id/video_player_view"
        app:layout_constraintTop_toTopOf="@id/video_player_view"
        tools:visibility="visible" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_0dp"
        android:layout_marginTop="@dimen/dimen_4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/video_player_view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:layout_marginTop="@dimen/dimen_12dp"
                android:layout_marginEnd="@dimen/dimen_20dp"
                android:textSize="@dimen/dimen_18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Movie name" />

            <TextView
                android:id="@+id/date_text_view"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:layout_marginTop="@dimen/dimen_4dp"
                android:layout_marginEnd="@dimen/dimen_20dp"
                android:textSize="@dimen/dimen_14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_text_view"
                tools:text="Date" />

            <LinearLayout
                android:id="@+id/vote_average_container"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="@dimen/dimen_80dp"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:background="@drawable/background_round_corner"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/vote_count_container"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date_text_view">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_detail_vote_average_label"
                    android:textSize="@dimen/dimen_12sp" />

                <TextView
                    android:id="@+id/vote_average_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dimen_14sp"
                    android:textStyle="bold"
                    tools:text="@string/vote_average" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/vote_count_container"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="@dimen/dimen_80dp"
                android:layout_marginStart="@dimen/dimen_14dp"
                android:layout_marginEnd="@dimen/dimen_14dp"
                android:background="@drawable/background_round_corner"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@id/vote_average_container"
                app:layout_constraintEnd_toStartOf="@id/language_container"
                app:layout_constraintStart_toEndOf="@id/vote_average_container"
                app:layout_constraintTop_toTopOf="@id/vote_average_container">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_detail_vote_count_label"
                    android:textSize="@dimen/dimen_12sp" />

                <TextView
                    android:id="@+id/vote_count_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dimen_14sp"
                    android:textStyle="bold"
                    tools:text="00" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/language_container"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="@dimen/dimen_80dp"
                android:layout_marginEnd="@dimen/dimen_20dp"
                android:background="@drawable/background_round_corner"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@id/vote_average_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/vote_count_container"
                app:layout_constraintTop_toTopOf="@id/vote_average_container">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_detail_language_label"
                    android:textSize="@dimen/dimen_12sp" />

                <TextView
                    android:id="@+id/vote_language_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dimen_14sp"
                    android:textStyle="bold"
                    tools:text="00" />
            </LinearLayout>

            <TextView
                android:id="@+id/videos_label_text_view"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:layout_marginEnd="@dimen/dimen_20dp"
                android:text="@string/movie_detail_videos_label"
                android:textSize="@dimen/dimen_14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vote_average_container" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/videos_recycler_view"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="@dimen/dimen_120dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/videos_label_text_view"
                tools:visibility="visible" />

            <ProgressBar
                android:id="@+id/videos_progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/videos_recycler_view"
                app:layout_constraintEnd_toEndOf="@id/videos_recycler_view"
                app:layout_constraintStart_toStartOf="@id/videos_recycler_view"
                app:layout_constraintTop_toTopOf="@id/videos_recycler_view"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/overview_text_view"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:layout_marginTop="@dimen/dimen_12dp"
                android:layout_marginEnd="@dimen/dimen_20dp"
                android:textSize="@dimen/dimen_14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/videos_recycler_view"
                tools:text="Overview" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
